<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WR Demo(2.03)</string>
    <string name="scan_start">Read</string>
    <string name="scan_stop">Cancel</string>
    <string name="scan_enable">Enable</string>
    <string name="scan_disable">Disable</string>
    <string name="scan_is_enable">Is</string>
    <string name="code_number">Code Number</string>
    <string name="code_value">Value</string>
    <string name="action_settings">Settings</string>
    <string name="profiles_title">ScanEmul Profiles</string>
    <string name="scanner_settings_on">Enabled</string>
    <string name="scanner_settings_off">Disabled</string>
    <string name="setting_associated_apps_title">Associated Apps</string>
    <string name="setting_associated_apps_summary">Associate apps to this profile</string>
    <string name="scanner_settings_topbutton_on">Use the scanner UI button</string>
    <string name="scanner_settings_topbutton_off">Turn off the scanner UI button</string>
    <string name="profile_add_title">Add Profile</string>
    <string name="scanner_title">Scanner</string>
    <string name="scanner_info">Waitting for scanning......</string>
    <string name="copy" tools:ignore="PrivateResource">Copy</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="decode_timeout">Decode timed out</string>
    <string name="decode_cancel">Decode cancel</string>
    <string name="scanner_settings_soundandvibrate">Sound and Vibrate and LED</string>
    <string name="scanner_settings_general">General settings</string>
    <string name="scanner_settings_switch">Is enabled or not</string>
    <string name="scanner_settings_output_mode">Output Mode</string>
    <string name="scanner_settings_read_mode">Read Mode</string>
    <string name="scanner_settings_end_char">End character</string>
    <string name="scanner_settings_prefix">Prefix</string>
    <string name="scanner_settings_postfix">Postfix</string>
    <string name="scanner_settings_sound">Sound</string>
    <string name="scanner_settings_volumePreference">Volume</string>
    <string name="scanner_settings_sound_on">Sound on</string>
    <string name="scanner_settings_sound_off">Sound off</string>
    <string name="scanner_settings_vibration">Vibration</string>
    <string name="scanner_settings_vibration_on">Vibration on</string>
    <string name="scanner_settings_vibration_off">Vibration off</string>
    <string name="scanner_settings_led">LED</string>
    <string name="scanner_settings_led_on">LED on</string>
    <string name="scanner_settings_led_off">LED off</string>
    <string name="scanner_settings_led_time">LED Time:[1~1000MSec]</string>
    <string name="scanner_settings_other">Other</string>
    <string name="scanner_settings_topbutton">Scanner Button</string>
    <string name="code_type_setting">Code type</string>
    <string name="code_type_upc_a">UPC-A</string>
    <string name="code_type_upc_e">UPC-E</string>
    <string name="code_type_upc_e1">UPC-E1</string>
    <string name="code_type_ean_8">EAN-8</string>
    <string name="code_type_ean_13">EAN-13</string>
    <string name="code_type_code_128">Code 128</string>
    <string name="code_type_code_39">Code 39</string>
    <string name="code_type_code_93">Code 93</string>
    <string name="code_type_interleaved_2_of_5">Interleaved 2 of 5</string>
    <string name="code_type_discrete_2_of_5">Discrete 2 of 5</string>
    <string name="code_type_chinese_2_of_5">Chinese 2 of 5</string>
    <string name="code_type_codabar">Codabar</string>
    <string name="code_type_msi">MSI</string>
    <string name="code_type_code_11">Code 11</string>
    <string name="code_type_gs1_databar_14">GS1 DataBar-14</string>
    <string name="code_type_gs1_databar_limited">GS1 DataBar Limited</string>
    <string name="code_type_gs1_databar_expanded">GS1 DataBar Expanded</string>
    <string name="code_type_codablock">Codablock</string>
    <string name="scanner_settings_type_title">Code Types Settings</string>
    <string name="scanner_settings_type_summary">Which types to be supported</string>
    <string name="scanner_code_type_params_title">Code Type params</string>
    <string name="scanner_code_type_params_summary">Setup code-type specific parameters</string>
    <string name="scanner_reader_params_title">Reader params</string>
    <string name="scanner_reader_params_summary">Set up reader specific parameters</string>
    <string name="scanner_scan_params_title">Scan params</string>
    <string name="scanner_scan_params_summary">Set up scan specific parameters</string>
    <string name="basic_data_formatting_title">Basic data formatting</string>
    <string name="basic_data_formatting_summary">Apply simple formatting for Keystroke output</string>
    <string name="imagecapture_settings_title">ImageCapture params</string>
    <string name="copy_and_paste">Copy and Paste</string>
    <string name="commit_text">Commit Text</string>
    <string name="key_emulation">Key Emulation</string>
    <string name="none">None(Copy to clipboard)</string>
    <string name="read_sync">Sync Mode</string>
    <string name="read_async">Async Mode</string>
    <string name="read_continue">Continue Mode</string>
    <string name="read_multiple">Multiple Mode</string>
    <string name="read_presentation">Presentation</string>
    <string name="read_aiming_and_release">Aiming and Release</string>
    <string name="result_title">RESULT WINDOW</string>
    <string name="result_codetype">CODE TYPE</string>
    <string name="result_data">DATA</string>
    <string name="result_aging_title">RESULT AGING WINDOW</string>
    <string name="end_char_enter">Enter</string>
    <string name="end_char_space">Space</string>
    <string name="end_char_tab">Tab</string>
    <string name="end_char_keyboard_enter">Keyboard Enter</string>
    <string name="end_char_keyboard_space">Keyboard Space</string>
    <string name="end_char_keyboard_tab">Keyboard Tab</string>
    <string name="end_char_null">Null</string>
    <string name="substring_title">Substring Formation:[beginIndex, endIndex]</string>
    <string name="code_setting_transmit_code">Transmit Code ID</string>
    <string name="transmit_code_none">None</string>
    <string name="transmit_code_aim_code">AIM Code ID</string>
    <string name="transmit_code_symbol_code">Symbol Code ID</string>
    <string name="code_setting_scanner_id">Set Using Camera ID</string>
    <string name="scannerid_0">Camera ID:0</string>
    <string name="scannerid_1">Camera ID:1</string>
    <string name="scannerid_2">Camera ID:2</string>
    <string name="scannerid_3">Camera ID:3</string>
    <string name="code_type_failed_to_enable">Failed to enable this type of code,please try again.</string>
    <string name="code_type_failed_to_disable">Failed to disable this type of code,please try again.</string>
    <string name="scanner_is_setting">Scanner is setting,please wait!</string>
    <string name="scanner_is_initializing">Scanner is initializing,please wait!</string>
    <string name="scanner_set_types_later">Scanner is initializing,please set types later!</string>
    <string name="scanner_init_success">Scanner is initialized successfully!</string>
    <string name="scanner_init_failed">Failed to initialize scanner.</string>
    <string name="scanner_failed_to_enable">Failed to enable scanner.</string>
    <string name="scanner_failed_to_disable">Failed to disable scanner.</string>
    <string name="scanner_settings_security_level">Linear Code Type Security Level</string>
    <string name="intent_output_title">Intent Output</string>
    <string name="intent_enable_title">Enabled</string>
    <string name="intent_enable_summary">Enable/disable output via intent</string>
    <string name="intent_action_title">Intent Action</string>
    <string name="intent_category_title">Intent Category</string>
    <string name="intent_extra_data_title">Intent Extra Data</string>
    <string name="intent_extra_type_title">Intent Extra Type</string>
    <string name="scanner_output_hexcode">Hexcode</string>
    <string name="scanner_mobile_mode_title">Read Mobile Barcode</string>
    <string name="scanner_hexcode_on_summary">Output data to Hexadecimal</string>
    <string name="scanner_hexcode_off_summary">Output data to Ascii</string>
    <string name="scanner_adaptive_scanning">Enable Adaptive Scanning</string>
    <string name="scanner_adaptive_scanning_summary">To improve decode range and optimize decode performance.</string>
    <string name="mobile_on_summary">Improves Barcode reading performance on mobile phones</string>
    <string name="mobile_off_summary">Disable mobile phone barcode mode</string>
    <string name="scanner_settings_readingoption">Reading Option</string>
    <string name="scanner_settings_prefixandpostfix">Prefix and Postfix</string>
    <string name="as_asciicode">Prefix and Postfix as Ascii Hex code</string>
    <string name="as_asciicode_enable">Ascii Hexadecimal code</string>
    <string name="as_asciicode_disable">Ascii String</string>
    <string name="aimer_illumination_title">Aimer and Illumination settings</string>
    <string name="laser_on_time_title">Laser On Time:[1~10Sec]</string>
    <string name="default_reset">Default Reset</string>
    <string name="scanner_settings_scannersettings">Scanner settings</string>
    <string name="option_datamatrix_title">Datamatrix Setting</string>
    <string name="code_type_data_matrix">Data Matrix</string>
    <string name="code_type_data_matrix_inverse">Data Matrix Inverse</string>
    <string name="data_matix_inverse_regular_only">Regular Only</string>
    <string name="data_matix_inverse_inverse_only">Inverse Only</string>
    <string name="data_matix_inverse_inverse_autodetect">Inverse Auto Detect</string>
    <string name="option_data_matrix_ink_spread">Data Matrix Ink Spread</string>
    <string name="profile_result_window">Result Window</string>
    <string name="setting_result_window_summary">Barcode scanning test</string>
    <string name="profile_image_capture">Image Capture</string>
    <string name="profile_export">DB Export</string>
    <string name="blank" />
    <string name="code_type_OCR_A">OCR-A</string>
    <string name="code_type_OCR_B">OCR-B</string>
    <string name="code_type_OCR_MICR">MICR E13B</string>
    <string name="code_type_pdf417">PDF417</string>
    <string name="code_type_micro_pdf417">Micro PDF417</string>
    <string name="code_type_qr">QR Code</string>
    <string name="code_type_micro_qr">Micro QR Code</string>
    <string name="code_type_dot_code">Dot Code</string>
    <string name="code_type_gs1_128">GS1 128</string>
    <string name="code_type_aztec">Aztec</string>
    <string name="code_type_han_xin">HAN XIN</string>
    <string name="code_type_compositeAB">Composite AB</string>
    <string name="code_type_compositeC">Composite C</string>
    <string name="code_type_japanese_postal">Japanese Postal</string>
    <string name="code_type_korean_3of5">Korean 3of5</string>
    <string name="code_type_matrix_2of5">Matrix 2of5</string>
    <string name="code_type_maxicode">Maxicode</string>
    <string name="code_type_us_planet">US Planet</string>
    <string name="code_type_us_postnet">US Postnet</string>
    <string name="code_type_uk_postal">UK Postal</string>
    <string name="code_type_netherlands_kix">Netherlands KIX</string>
    <string name="code_type_australian_postal">Australian Postal</string>
    <string name="code_type_upu_fics_postal">UPU FICS Postal</string>
    <string name="code_type_settings">Code Type Settings</string>
    <string name="export_settings">Export Settings</string>
    <string name="import_settings">Import Settings</string>
    <string name="info">Info</string>
    <string name="scanner_default">Scanner Default</string>
    <string name="scanner_hid">Only HID</string>
    <string name="scanner_spp">Only SPP</string>
    <string name="scanner_none">None</string>
</resources>