<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ble_s2p"
        android:title="S2P"
        app:showAsAction="always" />

    <item
        android:id="@+id/spacer"
        android:title="       "
        app:showAsAction="always" />

    <item
        android:id="@+id/ble_scan"
        android:title="SCAN"
        app:showAsAction="always" />
    <item
        android:id="@+id/ble_stop"
        android:title="STOP"
        app:showAsAction="always"
        android:visible="false" />

    <item
        android:id="@+id/menu_hid"
        android:title="@string/scanner_hid"  />
    <item
        android:id="@+id/menu_spp"
        android:title="@string/scanner_spp"  />
    <item
        android:id="@+id/menu_none"
        android:title="@string/scanner_none"  />

</menu>
