<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="Scanner Intent"
			android:textSize="20dp" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<Button
				android:id="@+id/btn_top_read"
				android:layout_width="0dp"
				android:layout_weight="2"
				android:layout_height="wrap_content"
				android:text="@string/scan_start"/>

			<Button
				android:id="@+id/btn_top_cancel"
				android:layout_width="0dp"
				android:layout_weight="2"
				android:layout_height="wrap_content"
				android:text="@string/scan_stop"/>


		</LinearLayout>


		<TextView
			android:id="@+id/tvIncome"
			android:layout_width="match_parent"
			android:layout_height="140dp"
			android:background="@drawable/border"
			android:ellipsize="none"
			android:gravity="left"
			android:singleLine="false" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<Button
				android:id="@+id/btnClear"
				android:layout_width="0dp"
				android:layout_weight="1.5"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="Clear"/>

			<Button
				android:id="@+id/btnInfo"
				android:layout_width="0dp"
				android:layout_weight="1.5"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="@string/info"/>

			<Button
				android:id="@+id/btnServiceOn"
				android:layout_width="0dp"
				android:layout_weight="1.8"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="Svc_On" />

			<Button
				android:id="@+id/btnServiceOff"
				android:layout_width="0dp"
				android:layout_weight="1.8"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="Svc_Off"/>



		</LinearLayout>




		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<Button
				android:id="@+id/btnHid"
				android:layout_width="0dp"
				android:layout_weight="1.5"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="HID"/>

			<Button
				android:id="@+id/btnSpp"
				android:layout_width="0dp"
				android:layout_weight="1.5"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="SPP"/>

			<Button
				android:id="@+id/btnNone"
				android:layout_width="0dp"
				android:layout_weight="1.8"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="None" />

			<Button
				android:id="@+id/btnCode"
				android:layout_width="0dp"
				android:layout_weight="1.8"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="Code.SET"/>



		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<Button
				android:id="@+id/btnAimOff"
				android:layout_width="0dp"
				android:layout_weight="1.5"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="Aim.OFF"/>

			<Button
				android:id="@+id/btnAimOn"
				android:layout_width="0dp"
				android:layout_weight="1.5"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="Aim.ON"/>

			<Button
				android:id="@+id/btnLightOff"
				android:layout_width="0dp"
				android:layout_weight="1.8"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="L.OFF" />

			<Button
				android:id="@+id/btnLightOn"
				android:layout_width="0dp"
				android:layout_weight="1.8"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="L.ON"/>
		</LinearLayout>



		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<Button
				android:id="@+id/btnTrigOn"
				android:layout_width="0dp"
				android:layout_weight="1.5"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="TrigON"/>

			<Button
				android:id="@+id/btnTrigOff"
				android:layout_width="0dp"
				android:layout_weight="1.5"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="Trig.OFF"/>

			<Button
				android:id="@+id/btnFindMe"
				android:layout_width="0dp"
				android:layout_weight="1.8"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="Find.Me" />

			<Button
				android:id="@+id/btnC4"
				android:layout_width="0dp"
				android:layout_weight="1.8"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:text="--"/>
		</LinearLayout>


		<TextView
			android:layout_width="wrap_content"
			android:layout_height="20dp"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="Settings"
			android:textSize="20dp" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="20dp"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />


		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="  Beep"
			android:textSize="15dp"/>

			<RadioGroup
				android:id="@+id/radio_sound"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="horizontal">

				<RadioButton
					android:id="@+id/rb_beep_off"
					android:text="OFF"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<RadioButton
					android:id="@+id/rb_beep_on"
					android:text="ON"
					android:checked="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

<!--				<RadioButton-->
<!--					android:id="@+id/sound_dingdong"-->
<!--					android:text="Ding-Dong"-->
<!--					android:layout_width="wrap_content"-->
<!--					android:layout_height="wrap_content"/>-->

			</RadioGroup>
1

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="20dp"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="  Read Mode"
			android:textSize="15dp"/>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<RadioGroup
				android:id="@+id/radio_read_mode"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="horizontal">

				<RadioButton
					android:id="@+id/btn_read_async"
					android:text="Async"
					android:checked="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
				<RadioButton
					android:id="@+id/btn_read_sync"
					android:text="Sync"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
				<RadioButton
					android:id="@+id/btn_read_aim"
					android:text="Aim"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</RadioGroup>

		</LinearLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="20dp"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />


		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="HID End Character"
			android:textSize="15dp"/>



		<RadioGroup
			android:id="@+id/radio_end_mode"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal" >

			<RadioButton
				android:id="@+id/rb_ec_enter"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true"
				android:text="Enter" />

			<RadioButton
				android:id="@+id/rb_ec_space"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Space" />

<!--			<RadioButton-->
<!--				android:id="@+id/ec_tab"-->
<!--				android:layout_width="wrap_content"-->
<!--				android:layout_height="wrap_content"-->
<!--				android:text="Tab" />-->

			<RadioButton
				android:id="@+id/rb_ec_none"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="None" />
		</RadioGroup>



		<TextView
			android:layout_width="wrap_content"
			android:layout_height="20dp"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />


		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<TextView
				android:id="@+id/textView_prefix"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:text="Prefix"
				android:textSize="15dp" />

			<TextView
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@+id/textView_postfix"
				android:text="Postfix"
				android:textSize="15dp" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<EditText
				android:id="@+id/etPrefix"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:text="@string/blank" />

			<EditText
				android:id="@+id/etPostfix"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:text="@string/blank" />

			<Button
				android:id="@+id/btnSetFix"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:text="Set Fix" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<Button
				android:id="@+id/btnDisableAll"
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:text="disable all" />

			<Button
				android:id="@+id/btnEnableAll"
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:text="enable all" />

		</LinearLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="20dp"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />


	</LinearLayout>
</ScrollView>